✨ Add username system and party chat
- Add username field to signup with validation
- Update friends list to display usernames instead of emails
- Add real-time party chat system with usernames
- Update database functions for username support
- Add profile migration for existing users
- Update README with new features

--- a/pages/dashboard/dashboard.html
+++ b/pages/dashboard/dashboard.html
@@ -46,10 +46,11 @@
             
             <div class="adventure-section">
                 <h2>Ready for Adventure?</h2>
-                <p>Your party is assembled and ready to embark on epic quests!</p>
+                <p>Coordinate with your party and schedule your next session!</p>
                 <div class="action-buttons">
                     <a href="../groups/groups.html" class="btn-primary">Manage Parties</a>
-                    <a href="../character-creation/character-creation.html" class="btn-secondary">Create Character</a>
+                    <a href="../availability/availability.html" class="btn-primary">Set Availability</a>
+                    <a href="../friends/friends.html" class="btn-secondary">Friends List</a>
                 </div>
             </div>
         </div>
