--- a/pages/groups/groups.html
+++ b/pages/groups/groups.html
@@ -67,6 +67,25 @@
                     <div class="loading-message">Loading your parties...</div>
                 </div>
             </div>
+            
+            <!-- Party Chat -->
+            <div id="party-chat-section" class="party-chat-section" style="display: none;">
+                <div class="chat-header">
+                    <h3 id="chat-party-name">Party Chat</h3>
+                    <button id="close-chat" class="btn-secondary">Close Chat</button>
+                </div>
+                <div class="chat-container">
+                    <div id="chat-messages" class="chat-messages">
+                        <!-- Messages will be populated here -->
+                    </div>
+                    <div class="chat-input-container">
+                        <form id="chat-form">
+                            <input type="text" id="chat-input" placeholder="Type your message..." maxlength="500" required>
+                            <button type="submit" class="btn-primary">Send</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
