--- a/pages/signup/signup.html
+++ b/pages/signup/signup.html
@@ -24,6 +24,9 @@
             <h2>Join the Party</h2>
             <form id="signup-form">
                 <div class="input-group">
+                    <input type="text" id="signup-username" placeholder="Username (3-20 characters)" required>
+                </div>
+                <div class="input-group">
                     <input type="email" id="signup-email" placeholder="Email" required>
                 </div>
                 <div class="input-group">
