--- a/pages/groups/groups.html
+++ b/pages/groups/groups.html
@@ -103,7 +103,11 @@
     <div id="copy-link-modal" class="modal">
         <div class="modal-content">
             <span class="close copy-link-close">&times;</span>
-            <h2>Share Your Party</h2>
+            <div class="invite-header">
+                <img src="../../Images/DungeonMaster.png" alt="Dungeon Master" class="invite-image">
+                <h2>Share Your Party</h2>
+                <p class="invite-message">The Dungeon Master calls for new adventurers!</p>
+            </div>
             <div class="invite-link-container">
                 <label for="invite-link">Share this link with your friends:</label>
                 <div class="link-input-group">
