Update join-group meta tags for better link previews

--- a/pages/join-group/join-group.html
+++ b/pages/join-group/join-group.html
@@ -14,10 +14,15 @@
     <meta property="og:image:width" content="512">
     <meta property="og:image:height" content="512">
     <meta property="og:image:alt" content="Dungeon Master inviting you to join the party">
+    <meta property="og:image:type" content="image/png">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://benjination.github.io/TimeToParty/pages/join-group/join-group.html">
+    <meta property="twitter:title" content="🎲 Join the Adventure - Time to Party">
+    <meta property="twitter:description" content="You've been invited to join a D&D party! The Dungeon Master awaits your arrival.">
+    <meta property="twitter:image" content="https://benjination.github.io/TimeToParty/Images/DungeonMaster.png">
+    <meta property="twitter:image:alt" content="Dungeon Master inviting you to join the party">
     <meta property="twitter:title" content="🎲 Join the Adventure - Time to Party">
     <meta property="twitter:description" content="You've been invited to join a D&D party! The Dungeon Master awaits your arrival.">
     <meta property="twitter:image" content="https://benjination.github.io/TimeToParty/Images/DungeonMaster.png">
