--- a/pages/availability/availability.html
+++ b/pages/availability/availability.html
@@ -77,6 +77,9 @@
             </div>
 
             <!-- Weekly Schedule Grid -->
+            <div class="mobile-scroll-hint">
+                <p>📱 <strong>Mobile Tip:</strong> Scroll horizontally to see all days of the week</p>
+            </div>
             <div class="schedule-container">
                 <div class="schedule-grid">
                     <!-- Header row -->
